--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,36 +22,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.0, 7, 1, 1], [10.0, inf, 0, 0]]\n",
-      "[[-inf, 1, 0, 0], [3, 5, 0, 1], [10, inf, 0, 0]]\n",
-      "[[2, 3, 0, 1], [5, 7, 0, 1]]\n",
-      "[]\n",
-      "[1, 10, 1, 1]\n",
-      "[[-5, 0, 0, 1], [1, 10, 1, 1]]\n",
       "False\n"
      ]
     }
    ],
    "source": [
-    "print(so.TrimSets([[10.0, float('inf'), 0, 0], [3.0, 5.0, 1, 0], [5, 7, 1, 1]]))    # merge and sort intervals\n",
-    "print(so.Complement(set1))    # complement of set1\n",
-    "print(so.Intersection(set1, set2) )   # intersections of set1 and set2\n",
-    "print(so.Intersections([set1, set2, set3]))    # intersections of sets...\n",
-    "print(so.UnionSet(set1, set2))        # unionSet of set1 and set2\n",
-    "print(so.UnionSets([set1, set2, set3]))  # UnionSet of sets...\n",
     "print(so.IsSubset(set3, set1))      # set3 is subset of set1 or not"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-inf, 1, 0, 0], [3, 5, 0, 1], [10, inf, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(so.Complement(set1))    # complement of set1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 3, 0, 1], [5, 7, 0, 1]]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(so.Intersection(set1, set2) )   # intersections of set1 and set2\n",
+    "print(so.Intersections([set1, set2, set3]))    # intersections of sets..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 10, 1, 1]\n",
+      "[[-5, 0, 0, 1], [1, 10, 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(so.UnionSet(set1, set2))        # unionSet of set1 and set2\n",
+    "print(so.UnionSets([set1, set2, set3]))  # UnionSet of sets..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.0, 7, 1, 1], [10.0, inf, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(so.TrimSets([[10.0, float('inf'), 0, 0], [3.0, 5.0, 1, 0], [5, 7, 1, 1]]))    # merge and sort intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
